# sprawl

./: .gitignore  CLAUDE.md  deploy.sh  package.json  setup-server.sh  sprawl-guide.md
client/: index.html  package.json  vite.config.ts
client/src/: App.tsx  app.css  index.tsx
client/src/engine/: BuildingPlacer.tsx  Canvas.tsx  DayNightCycle.tsx  GameObject.tsx  Grid.tsx  GridOverlay.tsx  Headlights.tsx  InstancePool.tsx  Mesh.tsx  MultiCanvasProvider.tsx  MultiCanvasView.tsx  OrthoCamera.tsx  RoadDrawer.tsx  Scene.tsx  World.tsx  spring.ts  theme.ts  theme.tsx
client/src/network/: connection.ts  index.tsx
client/src/state/: gameObjects.tsx
client/src/ui/: BuildMenu.tsx  BuildModeToolbar.tsx  DebugOverlay.tsx  TimeSlider.tsx  buildMode.ts  icons.tsx
lobby/: pnpm-lock.yaml
lobby-2.0/src/: app.css  app.tsx
server/: Cargo.toml
server/bindings/: Building.ts  BuildingType.ts  ErrorMessage.ts  GameObject.ts  GridCoord.ts  Operation.ts  PlaceRoad.ts  RoadNode.ts  StateUpdate.ts  TerrainTile.ts  TerrainType.ts
server/src/: bezier.rs  car_physics.rs  event_queue.rs  game_loop.rs  intersection.rs  main.rs  network.rs  pathfinding.rs  persistence.rs  protocol.rs  road_gen.rs  segment_tracker.rs  terrain.rs  tracked.rs  world.rs
server/src/car/: mod.rs  physics.rs  simulation.rs  spawn.rs
server/src/engine/: event_queue.rs  mod.rs  tracked.rs
server/src/game_loop/: mod.rs
server/src/intersection/: mod.rs
server/src/network/: mod.rs
server/src/world/: bezier.rs  buildings.rs  geometry.rs  mod.rs  pathfinding.rs  roads.rs  segments.rs
(+8 files in other folders)
